fix(WorkExperience): add margin-top to title for improved spacing

--- a/src/sass/components/_work-experience.scss
+++ b/src/sass/components/_work-experience.scss
@@ -57,6 +57,7 @@
       }
 
       &--title {
+        margin-top: 0.2rem;
         color: var(--color-zinc-400);
       }
     }
